small architecture refactor, add index.jsp and add 1 test

--- a/src/main/webapp/view/static/hello-page.css
+++ b/src/main/webapp/view/static/hello-page.css
@@ -1,3 +1,13 @@
+html {
+    background-image: url("/view/img/1667216653_1-celes-club-p-krasivii-belii-fon-vkontakte-1.jpg");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
 .form_radio_group {
     display: inline-block;
     overflow: hidden;
